test/static/wrong/case4.kk.out
test/static/wrong/case4.kk(5,15): error: type aInt should be cased as aint