test/static/wrong/case4.kk
// case sensitivity
import static/modA
import static/modB

alias wrong = aInt
